<resources>
    <string name="app_name">TutorTrack </string>
    <string name="let_s_go">Let\'s GO ➡</string>
    <string name="des">Looking for the ideal teacher?\n Connect with tutors and students from the\ncomfort of your home!</string>
    <string name="tutor">Tutor</string>
    <string name="home">Home</string>
    <string name="Tuation">Tuation</string>
    <string name="add">Add</string>
    <string name="privacy">Privacy</string>
    <string name="about">About</string>
    <string name="retry">Retry</string>
    <string name="no_internet">No Internet</string>
    <string name="please_check">Please check your connection status and try again</string>
    <string name="lastTutor">Latest Tutor Post</string>
    <string name="lastTuation">Latest Tuation Post</string>
    <string name="seeMore">See More ➺</string>
    <string name="strClass">Class</string>
    <string name="strEducation">Education</string>
    <string name="subjects">Subjects</string>
    <string name="strLocation">Location</string>
    <string name="strLocationP">Location : </string>
    <string name="salary">Salary</string>
    <string name="tutor_Details">Tutor Details</string>
    <string name="per_week">Per Week :</string>
    <string name="classp">Class :</string>
    <string name="medium">Medium :</string>
    <string name="subject">Subject :</string>
    <string name="post_date">Post Date :</string>
    <string name="salaryp">Salary :</string>
    <string name="call_now">Call Now</string>
    <string name="studied_at">Studied at :</string>
    <string name="tuation_details">Tuation Details</string>
    <string name="students_no">Students No :</string>
    <string name="time">Time :</string>
    <string name="callguardian">Call to speak to the guardian directly</string>
    <string name="callturoe">Call to speak to the tutor directly</string>
    <string name="post_tutor">Post Tutor details</string>
    <string name="post_stu">Post Tuation details</string>
    <string name="stupost">Want to improve your grades? Post your details and let’s match you with the perfect teacher to help you succeed!</string>
    <string name="turdes">Looking for personalized tuition? Share your details, and we\'ll connect you with the perfect tutor!</string>
    <string name="post_delete_request">Post Delete Request</string>
    <string name="tutor_post">Tutor Post</string>
    <string name="tuation_post">Tuation Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="delete_request">Delete Request</string>
    <string name="deldes">If you\'re sure you want to delete your post, please fill out the form</string>
    <string name="postsec">Please add your post screenshot :</string>
    <string name="enter_your_number">Enter your Number</string>
    <string name="enter_your_reason">Enter your reason</string>
    <string name="upload_your_profile_photo">Upload your profile photo</string>
    <string name="personal_details">Fill in your personal details</string>
    <string name="your_location">Enter your Location</string>
    <string name="enter_your_class">Enter your Class</string>
    <string name="about_yourself">About yourself</string>
    <string name="institute">Enter you Institute</string>
    <string name="days_per_week">Days per week</string>
    <string name="medium1">Medium</string>
    <string name="enter_your_subject">Enter your Subject</string>
    <string name="enter_students_no">Enter Students No</string>
    <string name="study_time">Study Time</string>
    <string name="post_now">Post Now</string>
    <string name="loading">Loading...</string>
    <string name="preference_class">Preference class</string>
    <string name="prefer_class">Prefer Class :</string>

</resources>