<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.Activity.DeletePostActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/c1"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/imgBack"
            android:gravity="center_vertical"
            android:text="@string/delete_post"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_back_24" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/deldes"
            android:textColor="@color/ash"
            android:textSize="17sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_your_name"
            app:boxStrokeColor="@color/ash"
            app:cursorColor="@color/black"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="25"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_your_number"
            app:boxStrokeColor="@color/ash"
            app:cursorColor="@color/black"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="14"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_your_reason"
            app:boxStrokeColor="@color/ash"
            app:cursorColor="@color/black"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edReason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLength="150"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/postsec"
            android:textColor="@color/ash"
            android:textSize="17sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            tools:ignore="UselessParent">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/imagSrc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAccessibility="no"
                    android:scaleType="fitXY" />


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardImagpick"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="248dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/c1"
                app:cardCornerRadius="25dp">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAccessibility="no"
                    android:padding="13dp"
                    android:src="@drawable/iccamera_alt_24" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>


        <ProgressBar
            android:layout_gravity="center_horizontal"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/pink"
            android:visibility="gone" />


        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:background="@color/ash"
            android:fontFamily="@font/roboto"
            android:text="@string/delete_request"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="@null" />


    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>