<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Views.Fragment.AddServiceFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/c1"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/lottie" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/light_ash" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/notosans"
                android:lineSpacingExtra="2dp"
                android:text="@string/stupost"
                android:textColor="@color/ash"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardTuationPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">


                <LinearLayout
                    android:background="@color/c1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="15dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="5dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/notosans"
                        android:text="@string/post_stu"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/notosans"
                android:lineSpacingExtra="2dp"
                android:text="@string/turdes"
                android:textColor="@color/ash"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardTutorPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/c2"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="15dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="5dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/icbook" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/notosans"
                        android:text="@string/post_tutor"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/notosans"
                android:lineSpacingExtra="2dp"
                android:text="Want to delete your post !"
                android:textColor="@color/ash"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardDeletePost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/c3"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="15dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="5dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/icdelete_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/notosans"
                        android:text="@string/post_delete_request"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>